--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
      <meta charset="UTF-8">
      <title>Crap</title>
      <meta name="description" content="DESCRIPTION">
-    <link rel="stylesheet" href="PATH">
+     <link href="styles.css" rel="stylesheet" type="text/css" />
+     <!-- Latest compiled and minified CSS -->
+     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
+
+
 
      <!--[if lt IE 9]>
        <script src = "http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -13,6 +17,88 @@
  </head>
 
  <body>
+   <div class="wrapper">
+     <div class="container-fluid">
+         <div class="carousel slide" id="myslider" data-ride="carousel">
+             <ol class="carousel-indicators">
+               <li data-target="#myslider" data-slide-to="0" class="active"></li>
+               <li data-target="#myslider" data-slide-to="1"></li>
+             </ol>
+           <div class="carousel-inner">
+                 <div class="carousel-item active">
+                   <img src="http://placehold.it/1024x350">
+                   <div class="carousel-caption">
+                     <h2>slika 1</h2>
+                   </div>
+                 </div>
+                 <div class="carousel-item">
+                   <img src="http://placehold.it/1024x350">
+                   <div class="carousel-caption">
+                     <h2>slika 2</h2>
+                   </div>
+                 </div>
+             </div>
+             <a class="carousel-control-prev" href="#myslider" data-slide="prev">
+               <span class="carousel-control-prev-icon"></span>
+             </a>
+             <a class="carousel-control-next" href="#myslider" data-slide="next">
+               <span class="carousel-control-next-icon"></span>
+            </a>
+        </div>
+
+     </div>
+
+
+
+   <div class="container text-muted">
+
+     <!-- cards -->
+     <div class="row">
+       <div class="col-md-12 col-lg-4 py-5">
+         <div class="card">
+           <img src="http://placehold.it/318x180" class="caed-img-top img-fluid" />
+           <div class="card block">
+
+             <h3 class="card-title">Rana intervencija</h3>
+             <p>ovo je tekst koji će opisati zadani naslov ujedno je ilink za višeo kategoriji</p>
+           </div>
+         </div>
+       </div>
+
+       <div class="col-md-12 col-lg-4 py-5">
+          <a href="/dijagnostika">
+         <div class="card">
+           <img src="http://placehold.it/318x180" class="caed-img-top img-fluid" />
+           <div class="card block">
+
+             <h3 class="card-title">Dijagnostika</h3>
+             <p>ovo je tekst koji će opisati zadani naslov ujedno je ilink za višeo kategoriji</p>
+           </div>
+         </div>
+       </a>
+       </div>
+
+       <div class="col-md-12 col-lg-4 py-5">
+         <div class="card">
+           <img src="http://placehold.it/318x180" class="caed-img-top img-fluid" />
+           <div class="card block">
+
+             <h3 class="card-title">Razvojni program</h3>
+             <p>ovo je tekst koji će opisati zadani naslov ujedno je ilink za višeo kategoriji</p>
+           </div>
+         </div>
+       </div>
+
+     </div>
+
+   </div>
+
+ </div>
+
+
+ <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
+ <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
+ <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
 
  </body>
 
